--- a/app/src/main/res/layout/activity_quran.xml
+++ b/app/src/main/res/layout/activity_quran.xml
@@ -18,72 +18,66 @@
         android:layout_marginLeft="0dp"
         android:src="@drawable/ic_back" />
 
-    <RelativeLayout
-        android:id="@+id/Layout_quran"
+    <FrameLayout
+
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginHorizontal="26dp"
-        android:background="@drawable/ic_corner_green"
-        android:layout_marginTop="84dp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="33dp"
+        android:layout_marginBottom="519dp"
+        android:layout_marginHorizontal="26dp">
 
-        <TextView
-            android:id="@+id/tc_baca_quran"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="27dp"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="48dp"
-            android:textSize="18sp"
-            android:text="Baca Qur'an"
-            android:fontFamily="@font/montserratsemibold"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/ic_corner_green">
+            <TextView
+                android:id="@+id/tc_hukum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="27dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="48dp"
+                android:fontFamily="@font/montserratsemibold"
+                android:text="Baca Qur'an"
+                android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tc_baca_quran"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginStart="27dp"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="9dp"
-            android:text="5 Dasar hukum dalam islam"
-            android:fontFamily="@font/montserratregular"
-            android:textSize="10sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tc_hukum"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="27dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="9dp"
+                android:fontFamily="@font/montserratregular"
+                android:text="5 Dasar hukum dalam islam"
+                android:textSize="10sp" />
+        </RelativeLayout>
 
-    </RelativeLayout>
 
-    <ImageView
-        android:layout_width="131dp"
-        android:layout_height="245dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="41dp"
-        android:src="@drawable/bacaquran"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="-78dp" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="230dp"
+            android:layout_marginStart="230dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
+            android:src="@drawable/bacaquran" />
+
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Layout_quran"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginStart="26dp"
         android:layout_marginLeft="26dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="245dp"
+        android:layout_marginBottom="246dp"
         android:text="Daftar Surah"
         android:fontFamily="@font/montserratsemibold"
         android:textSize="18sp" />
