--- a/app/src/main/res/layout/activity_quran2.xml
+++ b/app/src/main/res/layout/activity_quran2.xml
@@ -48,59 +48,65 @@
         tools:layout_editor_absoluteX="240dp"
         tools:layout_editor_absoluteY="-78dp" />
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="26dp"
         android:layout_marginTop="235dp"
         android:layout_marginBottom="458dp"
-        android:background="@drawable/ic_corner_white">
+        app:cardCornerRadius="15dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="15dp"
-            android:text="Keterangan"
-            android:fontFamily="@font/montserratsemibold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_down"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="26dp"
-            android:layout_marginEnd="26dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="15dp"
+                android:text="Keterangan"
+                android:textSize="11sp"
+                android:fontFamily="@font/montserratsemibold" />
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_arrow_down"
+                android:layout_marginRight="26dp"
+                android:layout_marginEnd="26dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="321dp"
+                android:layout_marginLeft="321dp"
+                android:layout_marginBottom="10dp"/>
 
-   <ScrollView
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+   <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
-       android:layout_height="420dp"
-       android:layout_marginTop="296dp">
-       <RelativeLayout
-           android:id="@+id/Layout_surat"
+       android:layout_height="match_parent"
+       android:layout_marginTop="296dp"
+       android:layout_marginHorizontal="26dp"
+       app:cardCornerRadius="15dp">
+       <ScrollView
            android:layout_width="match_parent"
-           android:layout_height="420dp"
-           android:layout_alignParentBottom="true"
-           android:layout_marginBottom="0dp">
-
-           <androidx.recyclerview.widget.RecyclerView
-               android:id="@+id/recycler_view_quran2"
+           android:layout_height="match_parent">
+           <RelativeLayout
+               android:id="@+id/Layout_quran2"
                android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_marginHorizontal="26dp">
+               android:layout_height="match_parent">
 
-           </androidx.recyclerview.widget.RecyclerView>
-       </RelativeLayout>
-   </ScrollView>
+               <androidx.recyclerview.widget.RecyclerView
+                   android:id="@+id/recycler_view_quran2"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:layout_marginHorizontal="15dp">
+
+               </androidx.recyclerview.widget.RecyclerView>
+           </RelativeLayout>
+       </ScrollView>
+   </androidx.cardview.widget.CardView>
 </RelativeLayout>
