--- a/app/src/main/res/layout/activity_doa.xml
+++ b/app/src/main/res/layout/activity_doa.xml
@@ -70,8 +70,8 @@
 
     </FrameLayout>
 
-
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_doa"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="271dp"
