--- a/app/src/main/res/layout/activity_niat.xml
+++ b/app/src/main/res/layout/activity_niat.xml
@@ -77,9 +77,11 @@
         android:layout_marginTop="271dp"
         android:layout_marginHorizontal="26dp"
         app:cardCornerRadius="15dp">
+
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="366dp"
+            android:layout_height="455dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
