--- a/app/src/main/res/layout/activity_hukum.xml
+++ b/app/src/main/res/layout/activity_hukum.xml
@@ -25,38 +25,42 @@
         android:layout_marginBottom="519dp"
         android:layout_marginHorizontal="26dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/ic_corner_yellow">
-            <TextView
-                android:id="@+id/tc_hukum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="27dp"
-                android:layout_marginLeft="27dp"
-                android:layout_marginTop="48dp"
-                android:fontFamily="@font/montserratsemibold"
-                android:text="Hukum Islam"
-                android:textSize="18sp" />
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/ic_corner_yellow">
+                <TextView
+                    android:id="@+id/tc_hukum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="27dp"
+                    android:layout_marginLeft="27dp"
+                    android:layout_marginTop="48dp"
+                    android:fontFamily="@font/montserratsemibold"
+                    android:text="Hukum Islam"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tc_hukum"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginStart="27dp"
-                android:layout_marginLeft="27dp"
-                android:layout_marginTop="9dp"
-                android:fontFamily="@font/montserratregular"
-                android:text="5 Dasar hukum dalam islam"
-                android:textSize="10sp" />
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tc_hukum"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginStart="27dp"
+                    android:layout_marginLeft="27dp"
+                    android:layout_marginTop="9dp"
+                    android:fontFamily="@font/montserratregular"
+                    android:text="5 Dasar hukum dalam islam"
+                    android:textSize="10sp" />
+            </RelativeLayout>
+        </LinearLayout>
 
 
         <ImageView
@@ -70,29 +74,33 @@
 
     </FrameLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="271dp"
+        android:layout_marginHorizontal="26dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="15dp">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-   <androidx.cardview.widget.CardView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_marginTop="271dp"
-       android:layout_marginHorizontal="26dp"
-       app:cardCornerRadius="15dp">
-       <ScrollView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_hukum"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="15dp">
 
-               <androidx.recyclerview.widget.RecyclerView
-                   android:id="@+id/recycler_view_hukum"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:layout_marginHorizontal="15dp">
+                    </androidx.recyclerview.widget.RecyclerView>
+                </RelativeLayout>
+            </ScrollView>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-               </androidx.recyclerview.widget.RecyclerView>
-           </RelativeLayout>
-       </ScrollView>
-   </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
