--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:orientation="horizontal">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          app:cardCornerRadius="30dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,12 +38,11 @@
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginTop="204dp"
-              android:layout_marginBottom="10dp"
-              android:layout_marginHorizontal="45dp"
+              android:layout_marginTop="200dp"
+              android:layout_marginStart="44dp"
+              android:fontFamily="@font/montserratsemibold"
               android:text="Baca Qur'an"
-              android:textSize="12sp"
-              android:fontFamily="@font/montserratsemibold"/>
+              android:textSize="12sp" />
         </RelativeLayout>
       </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -53,10 +53,13 @@
         android:layout_height="229dp"
         android:layout_marginLeft="218dp"
         android:layout_marginStart="218dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp"
         android:orientation="horizontal">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          app:cardCornerRadius="30dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -74,12 +77,11 @@
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginTop="204dp"
-              android:layout_marginBottom="10dp"
-              android:layout_marginHorizontal="42dp"
+              android:layout_marginTop="200dp"
+              android:layout_marginStart="32dp"
+              android:fontFamily="@font/montserratsemibold"
               android:text="Hukum Islam"
-              android:textSize="12sp"
-              android:fontFamily="@font/montserratsemibold"/>
+              android:textSize="12sp" />
         </RelativeLayout>
       </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -91,11 +93,14 @@
         android:layout_marginTop="260dp"
         android:layout_marginLeft="218dp"
         android:layout_marginStart="218dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp"
         android:orientation="horizontal">
 
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          app:cardCornerRadius="30dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -113,12 +118,11 @@
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginHorizontal="32dp"
-              android:layout_marginTop="204dp"
-              android:layout_marginBottom="10dp"
+              android:layout_marginTop="200dp"
+              android:layout_marginStart="24dp"
               android:fontFamily="@font/montserratsemibold"
               android:text="Niat dan Bacaan"
-              android:textSize="12sp"/>
+              android:textSize="12sp" />
         </RelativeLayout>
       </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -133,7 +137,8 @@
         android:orientation="horizontal">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          app:cardCornerRadius="30dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -152,9 +157,8 @@
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginHorizontal="58dp"
-              android:layout_marginTop="204dp"
-              android:layout_marginBottom="10dp"
+              android:layout_marginTop="200dp"
+              android:layout_marginStart="60dp"
               android:fontFamily="@font/montserratsemibold"
               android:text="Doa-doa"
               android:textSize="12sp" />
