--- a/app/src/main/res/layout/activity_niat.xml
+++ b/app/src/main/res/layout/activity_niat.xml
@@ -72,6 +72,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_niat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="271dp"
@@ -79,8 +80,8 @@
         app:cardCornerRadius="15dp">
 
         <ScrollView
-            android:layout_width="366dp"
-            android:layout_height="455dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
