--- a/app/src/main/res/layout/activity_doa.xml
+++ b/app/src/main/res/layout/activity_doa.xml
@@ -19,15 +19,15 @@
         android:src="@drawable/ic_back" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="33dp"
+        android:layout_width="350dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="519dp"
         android:layout_marginHorizontal="26dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="141dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/ic_corner_blue">
             <TextView
@@ -88,6 +88,7 @@
                     android:id="@+id/recycler_view_doa"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
                     android:layout_marginHorizontal="15dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
