--- a/app/src/main/res/layout/activity_niat.xml
+++ b/app/src/main/res/layout/activity_niat.xml
@@ -19,15 +19,15 @@
         android:src="@drawable/ic_back" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="33dp"
+        android:layout_width="350dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="519dp"
         android:layout_marginHorizontal="26dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="141dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/ic_corner_red">
             <TextView
@@ -70,7 +70,6 @@
 
     </FrameLayout>
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/card_niat"
         android:layout_width="match_parent"
@@ -78,11 +77,9 @@
         android:layout_marginTop="271dp"
         android:layout_marginHorizontal="26dp"
         app:cardCornerRadius="15dp">
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -91,6 +88,7 @@
                     android:id="@+id/recycler_view_niat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
                     android:layout_marginHorizontal="15dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
