--- a/app/src/main/res/layout/activity_quran.xml
+++ b/app/src/main/res/layout/activity_quran.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.HukumActivity">
 
     <ImageView
         android:id="@+id/ic_back_quran"
@@ -19,20 +19,19 @@
         android:src="@drawable/ic_back" />
 
     <FrameLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="33dp"
+        android:layout_width="350dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="519dp"
         android:layout_marginHorizontal="26dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="141dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/ic_corner_green">
             <TextView
-                android:id="@+id/tc_hukum"
+                android:id="@+id/tc_quran"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -48,7 +47,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tc_hukum"
+                android:layout_below="@+id/tc_quran"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="27dp"
@@ -74,33 +73,38 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="245dp"
+        android:layout_marginBottom="466dp"
         android:layout_marginStart="26dp"
         android:layout_marginLeft="26dp"
-        android:layout_marginTop="245dp"
-        android:layout_marginBottom="246dp"
         android:text="Daftar Surah"
-        android:fontFamily="@font/montserratsemibold"
-        android:textSize="18sp" />
+        android:textSize="16sp"
+        android:fontFamily="@font/montserratsemibold"/>
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_quran"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginTop="300dp">
-        <LinearLayout
-            android:id="@+id/linear_surat"
+        android:layout_height="match_parent"
+        android:layout_marginTop="271dp"
+        android:layout_marginHorizontal="26dp"
+        app:cardCornerRadius="15dp">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="450dp"
-            android:layout_alignParentBottom="true">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_quran"
+            android:layout_height="match_parent">
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="26dp">
+                android:layout_height="match_parent">
 
-            </androidx.recyclerview.widget.RecyclerView>
-        </LinearLayout>
-    </ScrollView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_quran"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginHorizontal="15dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </RelativeLayout>
+        </ScrollView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
