--- a/app/src/main/res/layout/activity_quran2.xml
+++ b/app/src/main/res/layout/activity_quran2.xml
@@ -18,35 +18,34 @@
         android:layout_marginLeft="0dp"
         android:src="@drawable/ic_back" />
 
-    <RelativeLayout
-        android:id="@+id/Layout_quran"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginHorizontal="26dp"
-        android:background="@drawable/ic_corner_green"
-        android:layout_marginTop="71dp">
+    <FrameLayout
+        android:layout_width="350dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="500dp"
+        android:layout_marginHorizontal="26dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="141dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/ic_corner_green">
+
+        </RelativeLayout>
 
 
-    </RelativeLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="230dp"
+            android:layout_marginStart="230dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
+            android:src="@drawable/bacaquran" />
 
-    <ImageView
-        android:layout_width="123dp"
-        android:layout_height="230dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="41dp"
-        android:src="@drawable/bacaquran"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="-78dp" />
+    </FrameLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -65,8 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginVertical="12sp"
                 android:text="Keterangan"
                 android:textSize="11sp"
                 android:fontFamily="@font/montserratsemibold" />
@@ -75,12 +73,11 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ic_arrow_down"
-                android:layout_marginRight="26dp"
-                android:layout_marginEnd="26dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginVertical="12dp"
                 android:layout_marginStart="321dp"
-                android:layout_marginLeft="321dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginLeft="321dp" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
