--- a/app/src/main/res/drawable/ic_corner_red.xml
+++ b/app/src/main/res/drawable/ic_corner_red.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F9E6FB"/>
+    <solid android:color="#FACEFF"/>
     <corners
         android:topRightRadius="25dp"
         android:topLeftRadius="25dp"
