--- a/app/src/main/res/drawable/ic_corner_green.xml
+++ b/app/src/main/res/drawable/ic_corner_green.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D4F3D7"/>
+    <solid android:color="#C6FDCB"/>
     <corners
         android:topRightRadius="25dp"
         android:topLeftRadius="25dp"
