--- a/app/src/main/res/layout/activity_niat.xml
+++ b/app/src/main/res/layout/activity_niat.xml
@@ -60,12 +60,10 @@
 
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="230dp"
-            android:layout_marginStart="230dp"
-            android:layout_marginEnd="18dp"
-            android:layout_marginRight="18dp"
+            android:layout_width="121dp"
+            android:layout_height="171dp"
+            android:layout_marginLeft="210dp"
+            android:layout_marginStart="210dp"
             android:src="@drawable/niat" />
 
     </FrameLayout>
@@ -75,6 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="271dp"
+        android:layout_marginBottom="26dp"
         android:layout_marginHorizontal="26dp"
         app:cardCornerRadius="15dp">
         <ScrollView
